--- a/ms/references.bib
+++ b/ms/references.bib
@@ -1,3 +1,17 @@
+
+@article{Allen-1998,
+  title = {Crop Evapotranspiration-{{Guidelines}} for Computing Crop Water Requirements-{{FAO Irrigation}} and Drainage Paper 56},
+  author = {Allen, Richard G and Pereira, Luis S and Raes, Dirk and Smith, Martin and others},
+  year = {1998},
+  volume = {300},
+  pages = {D05109},
+  journal = {Fao, Rome},
+  number = {9}
+}
+
+
+
+
 @Article{Baker-2004,
   title = {Variation in wood density determines spatial patterns in Amazonian forest biomass},
   volume = {10},
