--- a/ms/references.bib
+++ b/ms/references.bib
@@ -790,6 +790,19 @@
   pages = {137--149},
 }
 
+
+@article{Pacala-1996,
+	title = {Forest models defined by fields measurments: estimation, error analysis and dynamics},
+	volume = {66},
+	number = {1},
+	journal = {Ecological Monographs},
+	author = {Pacala, Stephen W. and Canham, C D and Saponara, J and Silander, J J A and Kobe, R K and Ribbens, E},
+	year = {1996},
+	pages = {1--43},
+	file = {Pacala et al_1996_Forest models defined by fields measurments.pdf:/home/georges/Dropbox/biblio/pdfNEW/Pacala et al_1996_Forest models defined by fields measurments.pdf:application/pdf}
+}
+
+
 @article{Pacala-1998,
   title = {Models Suggesting Field Experiments to Test Two Hypotheses Explaining Successional Diversity},
   volume = {152},
